--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -2,6 +2,7 @@
   border-radius: 8px;
   background-color: rgb(20, 20, 20);
   padding: 1rem 0rem;
+  height: auto;
 }
 
 .links {
