--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -32,95 +32,6 @@
   align-items: center;
 }
 
-.checking {
-  transform: scale(1.3);
-}
-
-input[type="checkbox"] {
-  appearance: none;
-  -webkit-appearance: none;
-  content: "✔";
-  height: 15px;
-  width: 15px;
-  cursor: pointer;
-  background-color: transparent;
-  border: 1px solid white;
-  border-radius: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.3s;
-  margin-left: 10px;
-}
-
-input[type="checkbox"]:hover {
-  background-color: var(--lightPurple);
-  transition: 0.3s;
-}
-
-input[type="checkbox"]:checked {
-  background-color: var(--purple);
-  transition: 0.3s;
-  border: 0;
-}
-
-input[type="checkbox"]:checked:after {
-  display: block;
-  content: "✔";
-  font-weight: 900;
-  font-size: 0.6rem;
-  color: white;
-}
-
-.taskdid {
-  display: grid;
-  grid-template-columns: 25px 200px repeat(3, 50px);
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  animation: anime 0.5s forwards;
-  line-height: 1.2rem;
-  padding: 1rem;
-  background-color: var(--blackback);
-  border-radius: 4px;
-  z-index: 9;
-  position: relative;
-}
-
-.taskdid p {
-  font-size: 0.89rem;
-  line-break: anywhere;
-  color: var(--white);
-}
-
-.star {
-  border: 0;
-  background-color: transparent;
-  grid-column: 5;
-}
-
-.star svg {
-  height: 20px;
-}
-
-.star.active svg path {
-  fill: rgb(152, 0, 253);
-}
-
-.star svg path {
-  fill: white;
-}
-
-@keyframes anime {
-  from {
-    transform: translateX(50px);
-    opacity: 0.6;
-  }
-  to {
-    opacity: initial;
-  }
-}
-
 /*completed*/
 
 .completed {
@@ -147,47 +58,5 @@ input[type="checkbox"]:checked:after {
   color: var(--blackp);
 }
 
-.risk {
-  position: relative;
-  display: inline-block;
-  width: fit-content;
-  padding: 0 !important;
-}
-.risk::before {
-  content: "";
-  position: absolute;
-  top: 8px;
-  left: 0;
-  width: 100%;
-  border-top: 2px solid var(--blackp);
-}
 
-/*options*/
 
-.options {
-  position: absolute;
-  top: 40px;
-  right: -40px;
-  background-color: #333333;
-  border: 1px solid var(--blackp);
-  border-radius: 2px;
-  width: 250px;
-  z-index: 1000;
-}
-
-.options ul {
-  display: flex;
-  flex-direction: column;
-}
-
-.options ul li {
-  font-size: 0.9rem;
-  padding: 1rem;
-  transition: 0.1s;
-}
-
-.options ul li:hover {
-  background-color: var(--blackp);
-  transition: 0.1s;
-  cursor: pointer;
-}
